NetBSD Problem Report #49389

From martin@aprisoft.de  Wed Nov 12 20:39:49 2014
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id C6B3FA65E5
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 12 Nov 2014 20:39:48 +0000 (UTC)
Message-Id: <20141112203939.6D691ED0E4F@emmas.aprisoft.de>
Date: Wed, 12 Nov 2014 21:39:39 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: config(1) is incompatible with previous releases
X-Send-Pr-Version: 3.95

>Number:         49389
>Category:       bin
>Synopsis:       config(1) is not backwards compatible
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Nov 12 20:40:00 +0000 2014
>Closed-Date:    Tue Dec 16 02:29:30 +0000 2014
>Last-Modified:  Tue Dec 16 02:29:30 +0000 2014
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.1
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD seven-days-to-the-wolves.aprisoft.de 7.99.1 NetBSD 7.99.1 (GENERIC) #2: Wed Oct 29 21:19:47 CET 2014 martin@seven-days-to-the-wolves.aprisoft.de:/usr/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:

Trying to build a netbsd-7 kernel using config(1) from -current fails, the
generated makefile references "build_kernel" which does not exist in the -7
tree.

While this is not exacactly a supported thing (and there is an obvious
workaround), it always used to work.

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Cc: 
Subject: Re: bin/49389: config(1) is incompatible with previous releases
Date: Wed, 12 Nov 2014 16:21:05 -0500

 On Nov 12,  8:40pm, martin@NetBSD.org (martin@NetBSD.org) wrote:
 -- Subject: bin/49389: config(1) is incompatible with previous releases

 | >Number:         49389
 | >Category:       bin
 | >Synopsis:       config(1) is not backwards compatible
 | >Confidential:   no
 | >Severity:       serious
 | >Priority:       medium
 | >Responsible:    bin-bug-people
 | >State:          open
 | >Class:          sw-bug
 | >Submitter-Id:   net
 | >Arrival-Date:   Wed Nov 12 20:40:00 +0000 2014
 | >Originator:     Martin Husemann
 | >Release:        NetBSD 7.99.1
 | >Organization:
 | The NetBSD Foundation, Inc.
 | >Environment:
 | System: NetBSD seven-days-to-the-wolves.aprisoft.de 7.99.1 NetBSD 7.99.1 (GENERIC) #2: Wed Oct 29 21:19:47 CET 2014 martin@seven-days-to-the-wolves.aprisoft.de:/usr/src/sys/arch/amd64/compile/GENERIC amd64
 | Architecture: x86_64
 | Machine: amd64
 | >Description:
 | 
 | Trying to build a netbsd-7 kernel using config(1) from -current fails, the
 | generated makefile references "build_kernel" which does not exist in the -7
 | tree.
 | 
 | While this is not exacactly a supported thing (and there is an obvious
 | workaround), it always used to work.

 I think part of the fault is that the $S/conf/Makefile* needs to be synced
 with config for things to work.

 christos

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49389: config(1) is incompatible with previous releases
Date: Sun, 14 Dec 2014 21:00:46 +0100

 I don't care for the details, but the current state makes bi-secting recent
 -current versions *extremely* expensive or error prone.

 Please let us fix it somehow.

 Martin

From: "Masao Uebayashi" <uebayasi@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49389 CVS commit: src/usr.bin/config
Date: Mon, 15 Dec 2014 10:10:24 +0000

 Module Name:	src
 Committed By:	uebayasi
 Date:		Mon Dec 15 10:10:24 UTC 2014

 Modified Files:
 	src/usr.bin/config: mkmakefile.c

 Log Message:
 config(1): Fix build of old tree (bin/49389)

 Define the default, empty "build_kernel" target, so that old source trees,
 whose sys/conf/Makefile.kern.inc don't have "build_kernel" .USE target, can
 be built.

 (When "build_kernel" is defined, the target is overriden, as far as
 sys/conf/Makefile.kern.inc is included later than the "netbsd: ..." definition
 in sys/arch/*/conf/Makefile.*.)

 This should address PR bin/49389.


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 src/usr.bin/config/mkmakefile.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: uebayasi@NetBSD.org
State-Changed-When: Mon, 15 Dec 2014 14:14:20 +0000
State-Changed-Why:
I could reproduce, fix, and confirm this, but can you check?


From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49389 (config(1) is not backwards compatible)
Date: Mon, 15 Dec 2014 15:33:24 +0100

 I tried a -current config and a netbsd-7 source tree, then did 

  cd sys/arch/evbarm/conf
  config CUBIETRUCK
  cd ../compile/CUBIETRUCK
  $TOOLDIR/bin/nbmake-evbearmv7hf-eb depend
  $TOOLDIR/bin/nbmake-evbearmv7hf-eb

 and it did not create a "netbsd" file for me.

 Martin

From: Masao Uebayashi <uebayasi@gmail.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: bin/49389 (config(1) is not backwards compatible)
Date: Tue, 16 Dec 2014 00:52:30 +0900

 I was too hasty.  Now not only "build_kernel" is defined, but also
 "netbsd" is really built.

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49389 (config(1) is not backwards compatible)
Date: Mon, 15 Dec 2014 18:24:06 +0100

 Yes, I can confirm it works now, thanks!

 Martin

State-Changed-From-To: feedback->closed
State-Changed-By: uebayasi@NetBSD.org
State-Changed-When: Tue, 16 Dec 2014 02:29:30 +0000
State-Changed-Why:
Confirmed by the submitter.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.